--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,28 +1,89 @@
-<form #userForm="ngForm" (ngSubmit)="onSubmit()">
+<form (ngSubmit)="onSubmit()" [formGroup]="userForm">
+
   <div class="mb-3">
-    <label class="form-label" for="name">Имя:</label>
-    <input #name="ngModel" [(ngModel)]="user.name" class="form-control" id="name" maxlength="10" minlength="3"
-           name="name" required type="text">
-    <div *ngIf="formErrors.name" class="alert alert-danger">{{formErrors.name}}</div>
+    <label class="form-label" for="name">{{formLabels.name}}</label>
+    <input (blur)="onValueChanged()"
+           [class]="{'is-valid': form['name'].valid,
+                     'is-invalid': form['name'].invalid && form['name'].touched}"
+           class="form-control" formControlName="name" id="name" placeholder="{{formPlaceholder.name}}"
+           type="text">
+    <div *ngIf="form['name'].valid" class="valid-feedback">{{formSuccess.name}}</div>
+    <div *ngIf="form['name'].invalid && form['name'].touched" class="invalid-feedback">{{formErrors.name}} </div>
   </div>
 
   <div class="mb-3">
-    <label class="form-label" for="age">Возраст:</label>
-    <input #age="ngModel" [(ngModel)]="user.age" class="form-control" id="age" name="age" required type="number">
-    <div *ngIf="formErrors.age" class="alert alert-danger">{{formErrors.age}}</div>
+    <label class="form-label" for="password">{{formLabels.password}}</label>
+    <input (blur)="onValueChanged()"
+           [class]="{'is-valid': form['password'].valid,
+                     'is-invalid': form['password'].invalid && form['password'].touched}"
+           class="form-control" formControlName="password" id="password" placeholder="{{formPlaceholder.password}}"
+           type="password">
+    <div *ngIf="form['password'].valid" class="valid-feedback">{{formSuccess.password}}</div>
+    <div *ngIf="form['password'].invalid && form['password'].touched"
+         class="invalid-feedback">{{formErrors.password}}</div>
   </div>
 
   <div class="mb-3">
-    <label class="form-label" for="role">Роль:</label>
-    <select [(ngModel)]="user.role" class="form-select" id="role" name="role" required>
-      <option disabled selected value="">Выберете роль</option>
+    <label class="form-label" for="email">{{formLabels.email}}</label>
+    <input (blur)="onValueChanged()"
+           [class]="{'is-valid': form['email'].valid,
+                     'is-invalid': form['email'].invalid && form['email'].touched}"
+           class="form-control" formControlName="email" id="email" placeholder="{{formPlaceholder.email}}"
+           type="email">
+    <div *ngIf="form['email'].valid" class="valid-feedback">{{formSuccess.email}}</div>
+    <div *ngIf="form['email'].invalid && form['email'].touched" class="invalid-feedback">{{formErrors.email}}</div>
+  </div>
+
+  <div class="mb-3">
+    <label class="form-label" for="age">{{formLabels.age}}</label>
+    <input (blur)="onValueChanged()"
+           [class]="{'is-valid': form['age'].valid,
+                     'is-invalid': form['age'].invalid && form['age'].touched}"
+           class="form-control" formControlName="age" id="age" placeholder="{{formPlaceholder.age}}"
+           type="text">
+    <div *ngIf="form['age'].valid" class="valid-feedback">{{formSuccess.age}}</div>
+    <div *ngIf="form['age'].invalid && form['age'].touched" class="invalid-feedback">{{formErrors.age}}</div>
+  </div>
+
+  <div class="mb-3">
+    <label class="form-label" for="site">{{formLabels.site}}</label>
+    <input (blur)="onValueChanged()"
+           [class]="{'is-valid': form['site'].valid,
+                     'is-invalid': form['site'].invalid && form['site'].touched}"
+           class="form-control" formControlName="site" id="site" placeholder="{{formPlaceholder.site}}"
+           type="text">
+    <div *ngIf="form['site'].pending" class="text-muted">
+      {{validationMessages.site.pending}}
+      <img alt="loading" class="loading" src="assets/loading.gif">
+    </div>
+    <div *ngIf="form['site'].valid" class="valid-feedback">{{formSuccess.site}}</div>
+    <div *ngIf="form['site'].invalid && form['site'].touched" class="invalid-feedback">
+      <div *ngIf="formErrors.site">{{formErrors.site}}</div>
+      <div *ngIf="!formErrors.site && form['site'].errors?.['urlNotAllowed']">
+        {{validationMessages.site.urlNotAllowed}}
+      </div>
+    </div>
+  </div>
+
+  <div class="mb-3">
+    <label class="form-label" for="role">{{formLabels.role}}</label>
+    <select (blur)="onValueChanged()"
+            [class]="{'is-valid': form['role'].valid,
+                     'is-invalid': form['role'].invalid && form['role'].touched}"
+            class="form-select"
+            formControlName="role"
+            id="role">
+      <option [value]="null" disabled selected>{{formPlaceholder.role}}</option>
       <option *ngFor="let role of roles" [value]="role">{{role}}</option>
     </select>
+    <div *ngIf="form['role'].valid" class="valid-feedback">{{formSuccess.role}}</div>
+    <div *ngIf="form['role'].invalid && form['role'].touched" class="invalid-feedback">{{formErrors.role}} </div>
   </div>
 
+
   <div class="mb-3">
-    <button [disabled]="userForm.form.invalid" class="btn btn-info">Сохранить</button>
+    <button [disabled]="userForm.invalid" class="btn btn-info">Сохранить</button>
   </div>
 </form>
 
-<p>{{user | json}}</p>
+
